# litecoins

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libltsoinconsensus.pc.in  litecoins.conf  release-notes.md
.github/: ISSUE_TEMPLATE.md
.travis/: test_05_before_script.sh  test_06_script.sh
build-aux/m4/: ltsoin_find_bdb48.m4  ltsoin_qt.m4  ltsoin_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  install_db4.sh  litecoins-cli.bash-completion  litecoins-qt.pro  litecoins-tx.bash-completion  litecoinsd.bash-completion  qt_translations.py  tidy_datadir.sh  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  litecoins-qt.desktop.desktop  litecoins-qt.install  litecoins-qt.lintian-overrides  litecoins-qt.protocol  litecoinsd.bash-completion  litecoinsd.examples  litecoinsd.install  litecoinsd.lintian-overrides  litecoinsd.manpages  rules  watch
contrib/devtools/: README.md  gen-manpages.sh  logprint-scanner.py  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  litecoinsd.conf  litecoinsd.init  litecoinsd.openrc  litecoinsd.openrcconf  litecoinsd.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: generate-seeds.py  nodes_main.txt
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: README.md  verify.sh
depends/: README.md
doc/: Dockerfile  Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  features.md  files.md  gitian-building.md  guide-startmany.md  init.md  masternode-budget.md  masternode-community.md  masternode_conf.md  multiwallet-qt.md  release-notes.md  release-process.md  swifttx.md  tor.md  translation_process.md  unit-tests.md  zmq.md
doc/man/: Makefile.am  litecoins-cli.1  litecoins-qt.1  litecoins-tx.1  litecoinsd.1
qa/pull-tester/: rpc-tests.sh  run-ltsoin-cli  run-ltsoind-for-test.sh.in  tests-config.sh.in
qa/rpc-tests/: README.md  bipdersig.py  conflictedbalance.sh  forknotify.py  getblocktemplate_longpoll.py  getblocktemplate_proposals.py  (+18 more)
share/: genbuild.sh  setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrman.h  alert.h  allocators.h  amount.cpp  amount.h  base58.h  bip38.cpp  bip38.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  crypter.h  db.h  hash.cpp  hash.h  httprpc.cpp  httprpc.h  httpserver.cpp  httpserver.h  init.cpp  init.h  (+94 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  rfc6979_hmac_sha256.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/primitives/: block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bip38tooldialog.cpp  bip38tooldialog.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  litecoins.cpp  litecoins.qrc  litecoins_locale.qrc  litecoinsstrings.cpp  ltsoinaddressvalidator.cpp  ltsoinaddressvalidator.h  ltsoinamountfield.cpp  ltsoinamountfield.h  ltsoingui.cpp  ltsoingui.h  ltsoinunits.cpp  ltsoinunits.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  masternodelist.cpp  (+78 more)
src/qt/forms/: addressbookpage.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  multisenddialog.ui  multisigdialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: litecoins_bg.ts  litecoins_ca.ts  litecoins_cs.ts  litecoins_da.ts  litecoins_de.ts  litecoins_en.ts  litecoins_en_US.ts  litecoins_es.ts  litecoins_fi.ts  litecoins_fr_FR.ts  litecoins_it.ts  litecoins_ja.ts  litecoins_ko_KR.ts  litecoins_nl.ts  litecoins_pl.ts  litecoins_pt.ts  litecoins_pt_BR.ts  litecoins_ro_RO.ts  litecoins_ru.ts  litecoins_sk.ts  litecoins_sv.ts  litecoins_tr.ts  litecoins_uk.ts  litecoins_zh_CN.ts  litecoins_zh_TW.ts
src/qt/res/: litecoins-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  ltsoinconsensus.cpp  ltsoinconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_ltsoin_NativeSecp256k1.c  org_ltsoin_NativeSecp256k1.h  org_ltsoin_Secp256k1Context.c  org_ltsoin_Secp256k1Context.h
src/secp256k1/src/java/org/ltsoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.h
src/test/: Checkpoints_tests.cpp  README.md  checkblock_tests.cpp  getarg_tests.cpp  ltsoin-util-test.py  main_tests.cpp  netbase_tests.cpp  scheduler_tests.cpp  script_tests.cpp  test_litecoins.cpp
src/test/data/: ltsoin-util-test.json
src/univalue/lib/: univalue_escapes.h
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
test/: README.md  config.ini.in
(+20 files in other folders)
